WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204434
Crash at com.apple.WebCore: -[WebRevealHighlight revealContext:drawRectsForItem:]
https://bugs.webkit.org/show_bug.cgi?id=204434
Summary
Crash at com.apple.WebCore: -[WebRevealHighlight revealContext:drawRectsForIt...
Conrad Shultz
Reported
2019-11-20 17:50:48 PST
It's possible to trigger a crash under -[WebRevealHighlight revealContext:drawRectsForItem:].
Attachments
Patch
(2.93 KB, patch)
2019-11-20 17:56 PST
,
Conrad Shultz
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Conrad Shultz
Comment 1
2019-11-20 17:51:55 PST
<
rdar://problem/57123416
>
Conrad Shultz
Comment 2
2019-11-20 17:56:12 PST
Created
attachment 384016
[details]
Patch
Megan Gardner
Comment 3
2019-11-20 18:09:13 PST
Comment on
attachment 384016
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=384016&action=review
r+ as long as you make sure that old systems aren't going to be broken.
> Source/WebCore/editing/cocoa/DictionaryLookup.mm:82 > }
I know I did this on purpose, I believe so that it would work on older 32 bit systems, but we might not compile for them anymore. Please verify that this is true before removing.
> Source/WebCore/editing/cocoa/DictionaryLookup.mm:-101 > -
Ditto.
Conrad Shultz
Comment 4
2019-11-20 22:33:03 PST
(In reply to Megan Gardner from
comment #3
)
> Comment on
attachment 384016
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=384016&action=review
> > r+ as long as you make sure that old systems aren't going to be broken. > > > Source/WebCore/editing/cocoa/DictionaryLookup.mm:82 > > } > > I know I did this on purpose, I believe so that it would work on older 32 > bit systems, but we might not compile for them anymore. Please verify that > this is true before removing. > > > Source/WebCore/editing/cocoa/DictionaryLookup.mm:-101 > > - > > Ditto.
We should be good as of macOS Catalina. Bots are green too. Thanks!
WebKit Commit Bot
Comment 5
2019-11-20 23:25:50 PST
Comment on
attachment 384016
[details]
Patch Clearing flags on attachment: 384016 Committed
r252729
: <
https://trac.webkit.org/changeset/252729
>
WebKit Commit Bot
Comment 6
2019-11-20 23:25:51 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug