Crash at com.apple.WebCore: -[WebRevealHighlight revealContext:drawRectsForItem:] https://bugs.webkit.org/show_bug.cgi?id=204434

Reviewed by Megan Gardner.

_attributedString was not retained, leading to a potential use-after-dealloc. Fix
this by wrapping it in a RetainPtr. While we're here, remove explicit ivars and
property synthesis and copy the string during assignment.

Reveal functionality is currently not testable.

* editing/cocoa/DictionaryLookup.mm:
(SOFT_LINK_CLASS_OPTIONAL):
(-[WebRevealHighlight initWithHighlightRect:useDefaultHighlight:attributedString:]):


Canonical link: https://commits.webkit.org/217710@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252729 268f45cc-cd09-0410-ab3c-d52691b4dbfc